<resources>
    <string name="app_name">AHEM_Basic</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="custom_string1">TEST STR</string>
<!--    MODIFY next line with for API KEY-->
    <string name="api_key">AIzaSyAHd2m9I5YD30mqfw215NjWXVKn9BwBSOo</string>

    <string name="address">Address</string>
    <string name="PM_2.5">PM 2.5</string>
    <string name="PM_10">PM 10</string>
    <string name="O3">Ozone (O3)</string>
    <string name="SO2">Sulfur Dioxide (SO2)</string>
    <string name="CO">Carbon Monoxide (CO)</string>
    <string name="NO2">Nitrogen Dioxide (NO2)</string>
    <string name="Sensitivities_title">Please select your sensitivities</string>
    <string name="LL_text">Lat,Lon (Default)</string>
    <string name="ip_address">https://kingjamie.ngrok.app/</string>
    <string name="request_type_polygon">v1/visualization/polygons?boundary=</string>
    <string name="request_type_route">v1/route?coordinates=</string>
    <string name="request_type_point">v1/visualization/polygon?latitude=</string>
    <string name="end_polygon_request">&amp;decimalPlaces=3</string>
    <string name="do_location">Do Location</string>
    <string name="end_routing">End Routing</string>
    <string name="danger_zone">WARNING!!\nYOU ARE IN OR VERY CLOSE TO A DANGER ZONE!!!</string>
    <string name="safety_first">Safety First</string>


</resources>